Боже храни королеву. Разработал оформление заказа((((

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
+    "inputmask": "^5.0.8",
+    "libphonenumber-js": "^1.10.55",
+    "primereact": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
